# segundo-parcial-parcial-2-diaz-kamada

./: CMakeLists.txt
PRUEBAS/: main.cpp
clases/: ArbolAvl.h  ArbolDate.h  ArbolFrom.h  ArbolMail.h  HashEntry.h  HashMap.h  Lista.h  ListaMail.h  Nodo.h  NodoArbol.h  NodoArbolDate.h  NodoArbolFrom.h  NodoAvl.h  NodoLista.h  NodoMail.h
src/: MailManager.cpp  MailManager.h  email.h  main.cpp
test/: CMakeLists.txt  tests.cpp
